# axum-demo

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.debian  Dockerfile.dev  Dockerfile.musl  README.md  build.sh  clippy.toml  compose.prod.yaml  compose.yaml  dev.Dockerfile  flake.nix  index.html  nice.txt  yahaha.txt
.cargo/: config.toml
.docker/: compose.yaml
.docker/local/: build-and-run.sh  compose.yaml  docker-compose.yaml
.docker/prod/: compose.yaml
pages/: form.html  index.html
src/: config.rs  error.rs  form.rs  lib.rs  main.rs  mongo.rs  service.rs  tests.rs  utils.rs
