[package]
name = "axum_demo"
version = "0.5.4"
edition = "2021"
authors = ["Yusong Lai <yusong.lai@icloud.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "axum-demo"

[profile.release]
lto = "thin"
panic = "abort"
strip = "symbols"

[dependencies]
# web serivce
axum = "0.7.4"
tower = { version = "0.4.13", features = ["timeout", "buffer"] }
# error handling
anyhow = "1.0.81"
# serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
# async
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
# log
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# utilities
uuid = { version = "1.7.0", features = ["v4", "serde"] }
ahash = { version = "0.8.11", features = ["serde"] }
once_cell = "1.19.0"
# database
mongodb = "2.8.2"
