[package]
name = "axum_demo"
version = "0.6.0-alpha.1"
edition = "2021"
authors = ["Yusong Lai <yusong.lai@icloud.com>"]
repository = "https://github.com/whisperpine/axum-demo"
license = "MIT OR Apache-2.0"
readme = "README.md"

[[bin]]
path = "src/main.rs"
name = "axum-demo"

[profile.release]
lto = "thin"
panic = "abort"
strip = "symbols"

[dependencies]
# web serivce
axum = "0.7.5"
tower = { version = "0.5.0", features = ["timeout", "buffer"] }
# error handling
anyhow = "1.0.86"
# serialization
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
# async
tokio = { version = "1.39.3", features = ["full"] }
futures = "0.3.30"
# log
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# utilities
uuid = { version = "1.10.0", features = ["v4", "serde"] }
ahash = { version = "0.8.11", features = ["serde"] }
# database
mongodb = "3.0.1"
